4.3.0:
- New: another exclusive live wallpaper based on Pixel 6 wallpapers (more to come!)
- New: dynamic colors in Doodle settings app for Android 12
- New: complete implementation of Material Design 3
- New: option to change language (translations by volunteers on Transifex, thank you all!)
- Improved: changed settings are applied to the wallpaper instantly
- Fixed: broken buttons in feedback dialog

Please consider translating this app into your language at Transifex. There are less than 100 strings to translate!

4.2.0:
- New: exclusive live wallpapers based on leaked Pixel 6 wallpapers
- New: another live wallpaper based on an artwork by Anna Kövecses
- Improved: shape rotation
- Fixed: wrong tilt effect direction in landscape mode

4.1.0:
- New: live wallpaper based on a static Chrome OS wallpaper by Anna Kövecses
- New: support for Android versions down to Android 5
- Improved: Material You wallpaper variants
- Improved: additional color variant for Doodle collection
- Improved: start page layout and wallpaper selection
- Improved: splash screen on Android 12

4.0.0:
- New: completely rewritten and reorganized settings app
- New: "Material You"-inspired wallpaper
- New: Android 12 wallpaper color support (not tested yet, please report related issues on GitHub (doodle-android) if you have Android 12 Beta installed)
- New: translation via Transifex (less than 90 strings to translate, link in About!)
- New: optional shape rotation while zooming
- New: change unlock zoom animation duration
- New: adjust motion damping intensity and movement threshold for tilt effect
- Improved: theme selection and internal wallpaper management
- Improved: RTL layout support
- Fixed: incorrect zoom on lockscreen
- Fixed: non-gesture navigation bar color in dialogs for Android 11 and higher

3.5.1:
- New: option to set tilt sensor refresh rate (useful if tilt caused lags with zoom animations)
- Fixed: skipped frames in zoom animation when unlocking immediately