@@ -125,7 +125,7 @@
   <string name="setting_language_system">System default: %1$s</string>
   <string name="setting_language_not_available">Not available</string>
   <string name="other_gpu">Hardware acceleration</string>
-  <string name="other_gpu_description">Turn off if the wallpaper crashes. Requires restart of the device to take effect if the wallpaper is currently active.</string>
+  <string name="other_gpu_description">Turn off if the wallpaper crashes. Changing will restart app and wallpaper.</string>
   <string name="other_gpu_info">Hardware acceleration is only available for Doodle starting with Android 8. The wallpaper animations might therefore be a bit jerky, especially with the second wallpaper.</string>
   <string name="other_launcher">Hide icon in launcher</string>
   <string name="other_launcher_description">Settings will only be accessible in your system\'s live wallpaper picker</string>
